refactor reagent logic